components/sandbox/toolchain-member-operator/base/monitoring/prometheus-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-user-workload-monitoring
  namespace: system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
  podSelector: {}
  policyTypes:
    - Ingress
